--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -18,6 +18,10 @@ a{
     background-color: rgba(108, 183, 255, 0.5) !important;
 }
 
+.center{
+    text-align: center !important;
+}
+
 .f{
     display: inline-block;
     border: 1px solid rgba(0, 0, 0, 0.1);
